public/styles/partials/global/burger.css
.burger li {
    height: 5px;
    width: 30px;
    margin-bottom: 5px;
    background-color:var(--eggshell);
    border-radius: 10px;
}

.gn {
    position: absolute;
    top: 5rem;
    left: 0;
}

.gn-items {
    margin: auto;
}

.gn li {
    width: 100vw;
    text-transform: uppercase;
    font-size: 1.25rem;
    background: rgb(9, 1, 15,0.25);
    -webkit-backdrop-filter: blur(5rem);
    backdrop-filter: blur(5rem);
    padding: 1rem;
    border-bottom: 0.125rem solid var(--oil);
}

.gn a {
    text-decoration: none;
    color: var(--eggshell);
    display: block;
}

.gn li a:focus {
    color:var(--orange);
}

.gn-trigger {
    background:none;
    width: 30px;
    height: 45px; 
    border: none;
    outline: 0;
    border-radius: 8px;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}



@media screen and (min-width:1200px) {

    .burger {
        display: none;
    }

    .gn li {
        width: auto;
        text-transform: none;
        background: none;
        backdrop-filter: none;
        /* padding: 1rem; */
        border: none;
        font-size: 0.8625rem;
    }

    .gn {
        display: block !important;
        position: static;
        /* width: 32rem; */
    }

    .gn-trigger {
        display: none;
    }
}

